Added telegram bot for task updating/creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+telegram.bot.token=7112018775:AAEImQ6Erz5lw1r2GKhTxBVreZBLw4rkw-M
