Added db switching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,15 @@ spring.application.name=taskManager
 springdoc.api-docs.path=/controller
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:task
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database=default
 spring.jpa.hibernate.ddl-auto=update
-
+datasource-h2.url=jdbc:h2:mem:task;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=FALSE;
+datasource-h2.username=sa
+datasource-h2.password=
+datasource-h2.driverClassName=org.h2.Driver
+datasource-postgres.url=jdbc:postgresql://localhost:5432/task?currentSchema=task
+datasource-postgres.username=postgres
+datasource-postgres.password=password
+datasource-postgres.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
 telegram.bot.token=7112018775:AAEImQ6Erz5lw1r2GKhTxBVreZBLw4rkw-M
