--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,9 +1,16 @@
-spring.datasource.url=jdbc:h2:mem:task;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;DB_CLOSE_ON_EXIT=FALSE;
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
+datasource-h2.url=jdbc:h2:mem:task;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=FALSE;
+datasource-h2.username=sa
+datasource-h2.password=password
+datasource-h2.driverClassName=org.h2.Driver
+datasource-postgres.url=jdbc:postgresql://localhost:5432/task
+datasource-postgres.username=postgres
+datasource-postgres.password=password
+datasource-postgres.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+jakarta.persistence.jdbc.url=jdbc:h2:mem:task;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=FALSE;
+hibernate.dialect=org.hibernate.dialect.H2Dialect
