--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,7 @@ datasource-postgres.username=postgres
 datasource-postgres.password=password
 datasource-postgres.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
+
 telegram.bot.token=7112018775:AAEImQ6Erz5lw1r2GKhTxBVreZBLw4rkw-M
+
+task.max-row-quantity=3
