Added support for postgresql as a reserve database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,23 @@
 spring.application.name=taskManager
-
+#Swagger
 springdoc.api-docs.path=/controller
 
 spring.h2.console.enabled=true
-spring.jpa.database=default
-spring.jpa.hibernate.ddl-auto=update
-datasource-h2.url=jdbc:h2:mem:task;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=FALSE;
+spring.jpa.hibernate.ddl-auto=create-drop
+#H2 database
+datasource-h2.jdbc-url=jdbc:h2:mem:task;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=FALSE;
 datasource-h2.username=sa
 datasource-h2.password=
 datasource-h2.driverClassName=org.h2.Driver
-datasource-postgres.url=jdbc:postgresql://localhost:5432/task?currentSchema=task
+datasource-h2.dialect=org.hibernate.dialect.H2Dialect
+datasource-h2.hibernate.hbm2ddl.auto=create-drop
+#Postgres database
+datasource-postgres.jdbc-url=jdbc:postgresql://localhost:5432/
 datasource-postgres.username=postgres
 datasource-postgres.password=password
 datasource-postgres.driverClassName=org.postgresql.Driver
-spring.jpa.show-sql=true
+datasource-postgres.dialect=org.hibernate.dialect.PostgreSQLDialect
+datasource-postgres.hibernate.hbm2ddl.auto=create-drop
 
 telegram.bot.token=7112018775:AAEImQ6Erz5lw1r2GKhTxBVreZBLw4rkw-M
 
