--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,14 +3,17 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
-datasource-h2.url=jdbc:h2:mem:task;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=FALSE;
+#H2 Database
+datasource-h2.jdbc-url=jdbc:h2:mem:task;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=FALSE;
 datasource-h2.username=sa
-datasource-h2.password=password
+datasource-h2.password=
 datasource-h2.driverClassName=org.h2.Driver
-datasource-postgres.url=jdbc:postgresql://localhost:5432/task
+datasource-h2.dialect=org.hibernate.dialect.H2Dialect
+#Postgres database
+datasource-postgres.jdbc-url=jdbc:tc:postgresql:11.1:///integration-tests-db
 datasource-postgres.username=postgres
 datasource-postgres.password=password
-datasource-postgres.driverClassName=org.postgresql.Driver
+datasource-postgres.driverClassName=org.testcontainers.jdbc.ContainerDatabaseDriver
+datasource-postgres.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-jakarta.persistence.jdbc.url=jdbc:h2:mem:task;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=FALSE;
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+
