--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
             <artifactId>telegrambots-client</artifactId>
             <version>7.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>1.19.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
